--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "heyDante",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^6.7.2",
     "nodemon": "^2.0.1"
   },
   "dependencies": {
